chore: usa Locale.of no lugar do construtor Locale depreciado (Java 19+)
new Locale("pt","BR") esta depreciado desde o Java 19. Locale.of("pt","BR")
produz o mesmo locale; formatacao pt-BR de TempoRespostaService inalterada.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>